carousel fix + overlay carousel fix (TODO css styling bug right side small white space)

--- a/Webclient/webClient.scss
+++ b/Webclient/webClient.scss
@@ -23,7 +23,7 @@ html {
     min-width: $default-min-width;
 
     /* sticky footer style */
-    position: relative; 
+    position: relative;
     min-height: 100%;
 }
 .noPadding {
@@ -40,17 +40,15 @@ html {
 	}
 }
 
-#content {
+#contentOverlay {
     position: fixed;
     width: 100%;
-    height: 100%;
     z-index: 10001 !important
 }
 
-#content .myCarousel .carousel {
-	top: 50%;
+#contentOverlay .myCarousel .carousel {
 	position: absolute;
-	transform: translate(0,-50%);
+	transform: translate(0, -50%);
 }
 
 #overlay {
